--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -234,6 +234,9 @@ jobs:
   test-mir-smoke:
     <<: *basic_test
 
+  test-ipc-basic:
+    <<: *basic_test
+
   test-chain-unit:
     <<: *basic_test
 
@@ -586,6 +589,11 @@ workflows:
           suite: consensus
           go-test-flags: "-tags=spacenet -timeout 10m -run TestMirSmoke"
           target: "./itests/mir_test.go"
+      - test-ipc-basic:
+          name: ipc-basic-tests
+          suite: consensus
+          go-test-flags: "-tags=spacenet -timeout 10m -run TestIPC"
+          target: "./itests/ipc_test.go"
       - test-mir-basic:
           name: mir-basic-tests
           suite: consensus
