before docker update

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,7 +1,7 @@
 all: docker generator runner
 
 docker:
-	docker build --tag eudico/e2e -f ../Dockerfile ../..
+	docker build --tag eudico/e2e -f ./Dockerfile ../..
 
 generator:
 	go build -o build/generator ./generator
