--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -4,15 +4,100 @@ services:
   node0:
     container_name: node0
     image: "lotus"
-    command: "/usr/local/bin/eudico mir daemon --genesis=/build/genesis/spacenet.car --bootstrap=false"
-    ports:
-      - "1230:1234"
+    build:
+      context: ../
+      dockerfile: tests/Dockerfile
+    command: "/scripts/mir/node.sh 0 /logs"
+    environment:
+      EUDICO: /usr/local/bin/eudico
+      LOTUS_PATH: /var/lib/lotus
+      LOTUS_MINER_PATH: /var/lib/lotus-miner
     volumes:
+      - ../_data/logs:/logs
       - ../_data/0:/var/lib/lotus
+      - ../_data/filecoin-proof-parameters:/var/tmp/filecoin-proof-parameters
       - ../build:/build
+      - ../scripts/mir:/scripts/mir/
+    ports:
+      - "1230:1230"
     networks:
       localnet:
-        ipv4_address: 192.167.10.2
+        ipv4_address: 192.168.10.2
+
+  node1:
+    container_name: node1
+    image: "lotus"
+    build:
+      context: ../
+      dockerfile: tests/Dockerfile
+    command: "/scripts/mir/node.sh 1 /logs"
+    environment:
+      EUDICO: /usr/local/bin/eudico
+      LOTUS_PATH: /var/lib/lotus
+      LOTUS_MINER_PATH: /var/lib/lotus-miner
+    volumes:
+      - ../_data/logs:/logs
+      - ../_data/1:/var/lib/lotus
+      - ../_data/filecoin-proof-parameters:/var/tmp/filecoin-proof-parameters
+      - ../build:/build
+      - ../scripts/mir:/scripts/mir/
+    depends_on:
+      - node0
+    ports:
+      - "1231:1231"
+    networks:
+      localnet:
+        ipv4_address: 192.168.10.3
+
+  node2:
+    container_name: node2
+    image: "lotus"
+    build:
+      context: ../
+      dockerfile: tests/Dockerfile
+    command: "/scripts/mir/node.sh 2 /logs"
+    environment:
+      EUDICO: /usr/local/bin/eudico
+      LOTUS_PATH: /var/lib/lotus
+      LOTUS_MINER_PATH: /var/lib/lotus-miner
+    volumes:
+      - ../_data/logs:/logs
+      - ../_data/2:/var/lib/lotus
+      - ../_data/filecoin-proof-parameters:/var/tmp/filecoin-proof-parameters
+      - ../build:/build
+      - ../scripts/mir:/scripts/mir/
+    depends_on:
+      - node0
+    ports:
+      - "1232:1232"
+    networks:
+      localnet:
+        ipv4_address: 192.168.10.4
+
+  node3:
+    container_name: node3
+    image: "lotus"
+    build:
+      context: ../
+      dockerfile: tests/Dockerfile
+    command: "/scripts/mir/node.sh 3 /logs"
+    environment:
+      EUDICO: /usr/local/bin/eudico
+      LOTUS_PATH: /var/lib/lotus
+      LOTUS_MINER_PATH: /var/lib/lotus-miner
+    volumes:
+      - ../_data/logs:/logs
+      - ../_data/3:/var/lib/lotus
+      - ../_data/filecoin-proof-parameters:/var/tmp/filecoin-proof-parameters
+      - ../build:/build
+      - ../scripts/mir:/scripts/mir/
+    depends_on:
+      - node0
+    ports:
+      - "1233:1233"
+    networks:
+      localnet:
+        ipv4_address: 192.168.10.5
 
 networks:
   localnet:
@@ -21,4 +106,4 @@ networks:
       driver: default
       config:
         -
-          subnet: 192.167.10.0/16
+          subnet: 192.168.10.0/16
