--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -3,21 +3,23 @@ version: '3'
 services:
   node0:
     container_name: node0
-    image: "lotus"
+    image: "eudico/e2e"
     build:
       context: ../
-      dockerfile: tests/Dockerfile
+      dockerfile: e2e/Dockerfile
     command: "/scripts/mir/node.sh 0 /logs"
     environment:
       EUDICO: /usr/local/bin/eudico
       LOTUS_PATH: /var/lib/lotus
       LOTUS_MINER_PATH: /var/lib/lotus-miner
+      CONFIG_DATA: /testdata/mir
     volumes:
       - ../_data/logs:/logs
       - ../_data/0:/var/lib/lotus
       - ../_data/filecoin-proof-parameters:/var/tmp/filecoin-proof-parameters
       - ../build:/build
       - ../scripts/mir:/scripts/mir/
+      - ./testdata/mir:/testdata/mir
     ports:
       - "1230:1230"
     networks:
@@ -26,21 +28,23 @@ services:
 
   node1:
     container_name: node1
-    image: "lotus"
+    image: "eudico/e2e"
     build:
       context: ../
-      dockerfile: tests/Dockerfile
+      dockerfile: e2e/Dockerfile
     command: "/scripts/mir/node.sh 1 /logs"
     environment:
       EUDICO: /usr/local/bin/eudico
       LOTUS_PATH: /var/lib/lotus
       LOTUS_MINER_PATH: /var/lib/lotus-miner
+      CONFIG_DATA: /testdata/mir
     volumes:
       - ../_data/logs:/logs
       - ../_data/1:/var/lib/lotus
       - ../_data/filecoin-proof-parameters:/var/tmp/filecoin-proof-parameters
       - ../build:/build
       - ../scripts/mir:/scripts/mir/
+      - ./testdata/mir:/testdata/mir
     depends_on:
       - node0
     ports:
@@ -51,21 +55,23 @@ services:
 
   node2:
     container_name: node2
-    image: "lotus"
+    image: "eudico/e2e"
     build:
       context: ../
-      dockerfile: tests/Dockerfile
+      dockerfile: e2e/Dockerfile
     command: "/scripts/mir/node.sh 2 /logs"
     environment:
       EUDICO: /usr/local/bin/eudico
       LOTUS_PATH: /var/lib/lotus
       LOTUS_MINER_PATH: /var/lib/lotus-miner
+      CONFIG_DATA: /testdata/mir
     volumes:
       - ../_data/logs:/logs
       - ../_data/2:/var/lib/lotus
       - ../_data/filecoin-proof-parameters:/var/tmp/filecoin-proof-parameters
       - ../build:/build
       - ../scripts/mir:/scripts/mir/
+      - ./testdata/mir:/testdata/mir
     depends_on:
       - node0
     ports:
@@ -76,21 +82,23 @@ services:
 
   node3:
     container_name: node3
-    image: "lotus"
+    image: "eudico/e2e"
     build:
       context: ../
-      dockerfile: tests/Dockerfile
+      dockerfile: e2e/Dockerfile
     command: "/scripts/mir/node.sh 3 /logs"
     environment:
       EUDICO: /usr/local/bin/eudico
       LOTUS_PATH: /var/lib/lotus
       LOTUS_MINER_PATH: /var/lib/lotus-miner
+      CONFIG_DATA: /testdata/mir
     volumes:
       - ../_data/logs:/logs
       - ../_data/3:/var/lib/lotus
       - ../_data/filecoin-proof-parameters:/var/tmp/filecoin-proof-parameters
       - ../build:/build
       - ../scripts/mir:/scripts/mir/
+      - ./testdata/mir:/testdata/mir
     depends_on:
       - node0
     ports:
