--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ genesis.car
 # The following files are checked into git and result
 # in dirty git state if removed from the docker context
 !extern/filecoin-ffi/rust/filecoin.pc
+
+_data
