--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   node0:
     container_name: node0
-    image: "eudico/e2e"
+    image: "eudico/e2e_old_docker"
     build:
       context: ../
       dockerfile: e2e/Dockerfile
@@ -11,12 +11,13 @@ services:
       LOTUS_PATH: /var/lib/lotus
       LOTUS_MINER_PATH: /var/lib/lotus-miner
       CONFIG_DATA: /testdata/mir
+      BUILD_DATA: /build
     volumes:
       - ./testdata/_runtime/logs:/logs
       - ./testdata/_runtime/0:/var/lib/lotus
       - /var/tmp/filecoin-proof-parameters:/var/tmp/filecoin-proof-parameters
       - ../build:/build
-      - ../scripts/mir:/scripts/mir/
+      - ../scripts/mir:/scripts/mir
       - ./testdata/mir:/testdata/mir
     healthcheck:
       test: [ "CMD-SHELL", "[ $(curl -w '%{http_code}' http://localhost:1230/rpc/v1) -eq 500 ]" ]
@@ -32,7 +33,7 @@ services:
 
   node1:
     container_name: node1
-    image: "eudico/e2e"
+    image: "eudico/e2e_old_docker"
     build:
       context: ../
       dockerfile: e2e/Dockerfile
@@ -42,12 +43,13 @@ services:
       LOTUS_PATH: /var/lib/lotus
       LOTUS_MINER_PATH: /var/lib/lotus-miner
       CONFIG_DATA: /testdata/mir
+      BUILD_DATA: /build
     volumes:
       - ./testdata/_runtime/logs:/logs
       - ./testdata/_runtime/1:/var/lib/lotus
       - /var/tmp/filecoin-proof-parameters:/var/tmp/filecoin-proof-parameters
       - ../build:/build
-      - ../scripts/mir:/scripts/mir/
+      - ../scripts/mir:/scripts/mir
       - ./testdata/mir:/testdata/mir
     depends_on:
       node0:
@@ -60,7 +62,7 @@ services:
 
   node2:
     container_name: node2
-    image: "eudico/e2e"
+    image: "eudico/e2e_old_docker"
     build:
       context: ../
       dockerfile: e2e/Dockerfile
@@ -70,12 +72,13 @@ services:
       LOTUS_PATH: /var/lib/lotus
       LOTUS_MINER_PATH: /var/lib/lotus-miner
       CONFIG_DATA: /testdata/mir
+      BUILD_DATA: /build
     volumes:
       - ./testdata/_runtime/logs:/logs
       - ./testdata/_runtime/2:/var/lib/lotus
       - /var/tmp/filecoin-proof-parameters:/var/tmp/filecoin-proof-parameters
       - ../build:/build
-      - ../scripts/mir:/scripts/mir/
+      - ../scripts/mir:/scripts/mir
       - ./testdata/mir:/testdata/mir
     depends_on:
       node0:
@@ -88,7 +91,7 @@ services:
 
   node3:
     container_name: node3
-    image: "eudico/e2e"
+    image: "eudico/e2e_old_docker"
     build:
       context: ../
       dockerfile: e2e/Dockerfile
@@ -98,12 +101,13 @@ services:
       LOTUS_PATH: /var/lib/lotus
       LOTUS_MINER_PATH: /var/lib/lotus-miner
       CONFIG_DATA: /testdata/mir
+      BUILD_DATA: /build
     volumes:
       - ./testdata/_runtime/logs:/logs
       - ./testdata/_runtime/3:/var/lib/lotus
       - /var/tmp/filecoin-proof-parameters:/var/tmp/filecoin-proof-parameters
       - ../build:/build
-      - ../scripts/mir:/scripts/mir/
+      - ../scripts/mir:/scripts/mir
       - ./testdata/mir:/testdata/mir
     depends_on:
       node0:
