--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   node0:
     container_name: node0
-    image: "eudico/e2e_old_docker"
+    image: "eudico/e2e"
     build:
       context: ../
       dockerfile: e2e/Dockerfile
@@ -33,7 +33,7 @@ services:
 
   node1:
     container_name: node1
-    image: "eudico/e2e_old_docker"
+    image: "eudico/e2e"
     build:
       context: ../
       dockerfile: e2e/Dockerfile
@@ -62,7 +62,7 @@ services:
 
   node2:
     container_name: node2
-    image: "eudico/e2e_old_docker"
+    image: "eudico/e2e"
     build:
       context: ../
       dockerfile: e2e/Dockerfile
@@ -91,7 +91,7 @@ services:
 
   node3:
     container_name: node3
-    image: "eudico/e2e_old_docker"
+    image: "eudico/e2e"
     build:
       context: ../
       dockerfile: e2e/Dockerfile
