--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -261,9 +261,32 @@ jobs:
   nightly-test-mir-reconfiguration:
     <<: *basic_test
 
+  e2etest: &e2e_test
+    description: |
+      Run e2e tests.
+    working_directory: ~/go/src/github.com/filecoin-project/lotus/e2e
+      steps:
+        - install-deps
+        - prepare
+        - run:
+            command: make deps lotus
+            no_output_timeout: 30m
+        - download-params
+        - run:
+            command: |
+            make test
+        - run:
+            command: |
+              dates="$(date +%s)"
+              mkdir -p /tmp/e2e-artifacts/"$dates"
+                [ -d "./testdata/_runtime/logs" ] && cp -R ./testdata/_runtime/logs/* /tmp/e2e-artifacts/"$dates" || echo "E2E logs directory not found"
+              when: on_fail
+        - store_artifacts:
+            path: /tmp/e2e-artifacts/
+
   nightly-e2e-test-mir-basic:
-    <<: *basic_test
-    
+    <<: *e2e_test
+
   test-conformance:
     description: |
       Run tests using a corpus of interoperable test vectors for Filecoin 
@@ -652,22 +675,3 @@ workflows:
           target: "./itests/mir_test.go"
       - nightly-e2e-test-mir-basic:
           name: nightly-mir-e2e-basic-tests
-          working_directory: ~/go/src/github.com/filecoin-project/lotus/e2e
-          steps:
-            - install-deps
-            - prepare
-            - run:
-                command: make deps lotus
-                no_output_timeout: 30m
-            - download-params
-            - run:
-                command: |
-                  make test
-            - run:
-                command: |
-                  dates="$(date +%s)"
-                  mkdir -p /tmp/e2e-artifacts/"$dates"
-                  [ -d "./testdata/_runtime/logs" ] && cp -R ./testdata/_runtime/logs/* /tmp/e2e-artifacts/"$dates" || echo "E2E logs directory not found"
-                when: on_fail
-            - store_artifacts:
-                path: /tmp/e2e-artifacts/
