--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -264,7 +264,7 @@ jobs:
   e2etest: &e2e_test
     description: |
       Run e2e tests.
-    working_directory: ~/go/src/github.com/filecoin-project/lotus/e2e
+    #working_directory: ~/go/src/github.com/filecoin-project/lotus/e2e
     steps:
       - install-deps
       - prepare
