--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -273,8 +273,7 @@ jobs:
           no_output_timeout: 30m
       - download-params
       - run:
-          command: |
-          make test
+          command: make test
       - run:
           command: |
             dates="$(date +%s)"
