--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -272,6 +272,8 @@ jobs:
           command: make deps lotus
           no_output_timeout: 30m
       - download-params
+      - setup_remote_docker:
+          version: 20.10.14
       - run:
           command: cd e2e && make test
       - run:
@@ -599,39 +601,6 @@ workflows:
   version: 2.1
   ci:
     jobs:
-      - lint-all:
-          concurrency: "16"   # expend all docker 2xlarge CPUs.
-      - mod-tidy-check
-      - gofmt
-      - gen-check
-      - test-chain-unit:
-          name: chain-unit-tests
-          suite: consensus
-          target: "./chain/consensus/..."
-      - test-ipcagent-unit:
-          name: ipcagent-unit-tests
-          suite: consensus
-          target: "./chain/ipcagent/..."
-      - test-mir-smoke:
-          name: mir-smoke-tests
-          suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 10m -run TestMirSmoke"
-          target: "./itests/mir_test.go"
-      - test-ipc-basic:
-          name: ipc-basic-tests
-          suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 10m -run TestIPC"
-          target: "./itests/ipc_test.go"
-      - test-mir-basic:
-          name: mir-basic-tests
-          suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 20m -run TestMirBasic"
-          target: "./itests/mir_test.go"
-      - test-mir-reconfiguration:
-          name: mir-reconfiguration-tests
-          suite: consensus
-          go-test-flags: "-tags=spacenet -timeout 20m -run TestMirReconfiguration"
-          target: "./itests/mir_test.go"
       - e2e-test-mir-basic:
           name: e2e-mir-basic-tests
       - build-spacenet
