--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ orbs:
   aws-cli: circleci/aws-cli@1.3.2
 
 executors:
+  machine:
+    image: ubuntu-2004:202104-01
+    docker_layer_caching: true
   golang:
     docker:
       - image: cimg/go:1.18.8
@@ -263,7 +266,7 @@ jobs:
 
   e2etest: &e2e_test
     description: Run e2e tests.
-    executor: golang
+    executor: machine
     working_directory: ~/go/src/github.com/filecoin-project/lotus/e2e
     steps:
       - install-deps
@@ -271,9 +274,15 @@ jobs:
       - run:
           command: make deps lotus
           no_output_timeout: 30m
-      - download-params
       - setup_remote_docker:
           version: 20.10.14
+      - run:
+          name: Install Docker Compose
+          command: |
+            set -x
+            curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
+            chmod +x /usr/local/bin/docker-compose
+      - download-params
       - run:
           command: cd e2e && make test
       - run:
@@ -603,25 +612,6 @@ workflows:
     jobs:
       - e2e-test-mir-basic:
           name: e2e-mir-basic-tests
-      - build-spacenet
-      - build-all:
-          filters:
-            tags:
-              only:
-                - /^v\d+\.\d+\.\d+(-rc\d+)?$/
-      - build-macos:
-          filters:
-            tags:
-              only:
-                - /^v\d+\.\d+\.\d+(-rc\d+)?$/
-      - build-appimage:
-          filters:
-            branches:
-              ignore:
-                - /.*/
-            tags:
-              only:
-                - /^v\d+\.\d+\.\d+(-rc\d+)?$/
   nightly:
     triggers:
       - schedule:
