--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -264,7 +264,7 @@ jobs:
   e2etest: &e2e_test
     description: Run e2e tests.
     machine:
-      image: ubuntu-2004:202104-01
+      image: ubuntu-2204:2023.02.1
       docker_layer_caching: true
     working_directory: ~/go/src/github.com/filecoin-project/lotus/e2e
     steps:
