--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ commands:
           steps:
             - run: sudo apt-get update
             - run:
-                command: sudo apt-get install ocl-icd-opencl-dev libhwloc-dev
+                command: sudo apt-get install -y ocl-icd-opencl-dev libhwloc-dev
                 no_output_timeout: 30m
       - run: git submodule sync
       - run: git submodule update --init
