--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -12,6 +12,10 @@ gen:
 	go run ./generator/cmd -ip=192.168.10.2 -n=4 -output="./testdata/mir/"
 
 tests:
+	echo "DEBUG:"
+	ls -la
+	whoami
+	sleep 5
 	go test -v -count=1 -timeout=20m ./...
 
 up:
