--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -22,7 +22,7 @@ tests:
 	go test -v -count=1 -timeout=20m ./...
 
 up:
-	docker compose up -d
+	env UID=$(id -u) GID=$(id -g) docker compose up -d
 
 down:
 	docker compose down
