--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -20,7 +20,7 @@ run-tests-on-ci:
 	go test -c -o tests.app ./tests
 	sudo ./tests.app -test.v
 up:
-	docker compose up -d
+	BUILDKIT_PROGRESS=plain docker compose up -d
 
 down:
 	docker compose down
