--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -199,6 +199,7 @@ jobs:
             TEST_RUSTPROOFS_LOGS: << parameters.proofs-log-test >>
             SKIP_CONFORMANCE: "1"
             MIR_INTERCEPTOR_OUTPUT: "mir-interceptor"
+            GOLOG_LOG_LEVEL: "error,mir-consensus=info,mir-manager=info"
           command: |
             mkdir -p /tmp/test-reports/<< parameters.suite >>
             mkdir -p /tmp/test-artifacts
